# api-polimeros

./: .gitignore  flake.nix  pyproject.toml
src/: main.py
src/db/: connect.py  polymers.db  script.sql
src/requests/: base.py
